--- a/Ponto_digital/wwwroot/css/Home.css
+++ b/Ponto_digital/wwwroot/css/Home.css
@@ -179,7 +179,7 @@ body {
 #planos .container .logoH3 {
     margin-left: 0.5em;
 }
-#planos .contauner h3 {
+#planos .container h3 {
     margin-left: 0;
 }
 #planos .container .texto {
@@ -202,11 +202,10 @@ body {
 }
 #planos .mensais {
     position: relative;
-    right: 8.7em;
-    top: 2em;
+    right: 5.5em;
+    top: 1.2em;
+    font-size: 2.4em;
     color: white;
-    font-family: 'Nova Square', cursive;
-    font-size: 1.6em;
     font-weight: bold;
 }
 /*
@@ -331,7 +330,70 @@ body {
     #sobre {
         display: block;
     }
-    .yt-video{
-        display: none;
+    #sobre div:nth-child(odd) {
+        position: relative;
+        top: 25em;
+        width: 100%;
+        height: 20em;
+    }
+    #sobre div:nth-child(even) {
+        position: relative;
+        bottom: 17em;
+        width: 100%;
+    }
+    #sobre{
+        height: auto;
+    }
+    #sobre p {
+        font-size: 1.5em;
+        margin-top: 1.2em;    
+    }
+    #planos h2 {
+        margin-top: 1.3em;
+    }
+    #destaques{
+        margin: 13em 0 0 0;
+    }
+    #destaques h2{
+        margin: 1em 2em;
+    }
+    #destaques .content{
+        width: 50%;
+        margin-top: 1.5em;
+    }
+    #destaques .container{
+        flex-wrap: wrap;
+    }
+    #planos .gratuito{
+        width: 90%;
+    }
+    #planos .logoH3{
+        margin: 1em;
+        width: unset;
+    }
+    #planos .logoH3 h3{
+        white-space: nowrap;
+    }
+    #planos .texto{
+        margin: 2em 0 0 4em;
+    }
+    #planos .container > div{
+        width: 42.5%;
+    }
+    #planos .container{
+        width: 100%;
+        flex-wrap: wrap;
+    }
+    #planos .preco{
+        font-size: 2em;
+        white-space: nowrap;
+    }
+    #planos .mensais{
+        top: 1.4em;
+        right: 5em;
+        font-size: 2em;
+    }
+    #noticias{
+        padding: 1.5em;
     }
 }
