--- a/Ponto_digital/wwwroot/css/Style.css
+++ b/Ponto_digital/wwwroot/css/Style.css
@@ -1,228 +1,273 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
 li {
-    list-style: none;
+	list-style: none;
 }
 a {
-    text-decoration: none;
+	text-decoration: none;
+}
+.invisible1{
+    display: none;
 }
 body {
-    /* background: url('../Iconografia/background.png'); */
-    background-color: #293972;
-    background-repeat: no-repeat;
-    background-size: 100%;
+	/* background: url('../Iconografia/background.png'); */
+	background-color: #293972;
+	background-repeat: no-repeat;
+	background-size: 100%;
 }
 .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 12px 16px;
-    z-index: 1;
-  }
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
+	position: relative;
+	display: inline-block;
+}
+.dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #f9f9f9;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+	padding: 12px 16px;
+	z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+	display: block;
+}
+.invisible{
+    display: flex;
+	justify-content: space-around;
+}
 /*
 ----------------HEADER----------------
 */
 header {
-    background: url('../Iconografia/adult-agreement-business-1089549.png');
-    background-size: 100%;
-    background-repeat: no-repeat;
-    height: 70vh;
-    z-index: 1;
+	background: url('../Iconografia/adult-agreement-business-1089549.png');
+	background-size: 100%;
+	background-repeat: no-repeat;
+	height: 80vh;
+	z-index: 1;
 }
-.navMenu{
-    width: 80vw;
-    margin-left: 6vw;
+#navMenu {
+	width: 80vw;
+	margin-left: 6vw;
 }
-.navMenu a {
-    /* text-transform: uppercase; */
-    color: #1e284b;
-    font-weight: bold;
-    font-family: 'Nova Square', cursive;
-    font-size: 2.3em;
+#menuList a {
+	/* text-transform: uppercase; */
+	color: #1e284b;
+	font-weight: bold;
+	font-family: 'Nova Square', cursive;
+	font-size: 2.3em;
 }
-.navMenu a:hover {
-    color: white;
+#menuList a:hover {
+	color: white;
 }
-.navMenu ul {
-    width: 80%;
-    display: flex;
-    justify-content: space-around;
-    position: relative;
-    top: 7vh;
-    left: 7.5vw;
+.flexList{
+    
 }
-.navMenu li {
-    white-space: nowrap;
+#menuList {
+	width: 80%;
+	position: relative;
+	top: 7vh;
+	left: 7.5vw;
+}
+#menuButton {
+	width: 7%;
+	position: relative;
+	top: 4.5em;
+	left: 1.1em;
+}
+#menuList li {
+	white-space: nowrap;
 }
 #login {
-    position: relative;
-    padding: 0;
-    margin: 0;
-    left: 18vw;
+	position: relative;
+	padding: 0;
+	margin: 0;
+	left: 18vw;
 }
 h1 {
-    position: relative;
-    top: 7em;
-    left: 0.3em;
-    font-size: 2.5em;
-    width: 30%;
-    text-transform: uppercase;
-    font-family: 'Nova Square', cursive;
-    color: #dc8b44;
+	position: relative;
+	top: 7em;
+	right: 2.5em;
+	font-size: 2.5em;
+	width: 30%;
+	text-transform: uppercase;
+	font-family: 'Nova Square', cursive;
+	color: #dc8b44;
 }
 .navBar {
-    position: relative;
-    top: 6.9vh;
-    left: 10.4em;
-    background-color: #1e284b;
-    height: 1.5vh;
-    width: 84.2vw;
+	position: relative;
+	top: 6.9vh;
+	left: 10.4em;
+	background-color: #1e284b;
+	height: 1.5vh;
+	width: 84.2vw;
 }
 /*
 ----------------FOOTER----------------
 */
 footer {
-    background-color: #1e284b;
-    width: 100%;
-    padding: 4em 1em;
-    margin-top: 3em;
+	background-color: #1e284b;
+	width: 100%;
+	padding: 4em 1em;
+	margin-top: 3em;
 }
 footer p {
-    color: white;
-    padding-bottom: 1em;
+	color: white;
+	padding-bottom: 1em;
 }
 footer a {
-    color: #dc8b44;
+	color: #dc8b44;
 }
 footer a:hover {
-    color: white;
+	color: white;
 }
 footer .container {
-    width: 100%;
-    display: flex;
+	width: 100%;
+	display: flex;
 }
 footer .mapaDoSite {
-    border-left: 0.3em solid #dc8b44;
-    padding-left: 1em;
-    margin-left: 5em;
+	border-left: 0.3em solid #dc8b44;
+	padding-left: 1em;
+	margin-left: 5em;
 }
 footer .mapaDoSite p {
-    font-size: 1.5em;
-    font-weight: bold;
+	font-size: 1.5em;
+	font-weight: bold;
 }
 footer img {
-    height: 3em;
-    width: 3em;
-    margin-top: 5em;
+	height: 3em;
+	width: 3em;
+	margin-top: 5em;
 }
 footer img:hover {
-    cursor: pointer;
+	cursor: pointer;
 }
 /* imq   */
 @media screen and (max-width: 1800px) {
-    .navMenu{
-        width: 65vw;
-        margin-left: 6vw;
-    }
-    body{
-        letter-spacing: 0;
-    }
-    .navMenu a {
-        font-size: 2em;
-        margin: 0 0.5em;
-    }
-    .navMenu a:hover {
-        color: white;
-    }
-    .navMenu ul {
-       justify-content: space-between;
-        top: 7vh;
-        left: 9vw;
-    }
-    #login {
-        padding: 0;
-        margin: 0;
-        left: 25vw;
-    }
-    h1 {
-        top: 8em;
-        left: -2.7em;
-        font-size: 2em;
-        width: 30%;
-        color: #dc8b44;
-    }
-    .navBar {
-        left: 9.8em;
-        height: 1.2vh;
-        width: 83.5vw;
-    }
+	#navMenu {
+		width: 65vw;
+		margin-left: 6vw;
+	}
+	body {
+		letter-spacing: 0;
+	}
+	#navMenu a {
+		font-size: 2em;
+		margin: 0 0.5em;
+	}
+	#navMenu a:hover {
+		color: white;
+	}
+	#menuList {
+		justify-content: space-between;
+		top: 7vh;
+		left: 9vw;
+	}
+	#login {
+		padding: 0;
+		margin: 0;
+		left: 25vw;
+	}
+	h1 {
+		top: 8em;
+		left: -2.7em;
+		font-size: 2em;
+		width: 30%;
+		color: #dc8b44;
+	}
+	.navBar {
+		left: 9.8em;
+		height: 1.2vh;
+		width: 83.5vw;
+	}
 }
-@media screen and (max-width: 1700px){
-    .navBar {
-        left: 9.5em;
-    }
-    #login {
-        padding: 0;
-        margin: 0;
-        left: 21vw;
-    }
+@media screen and (max-width: 1700px) {
+	.navBar {
+		left: 9.5em;
+	}
+	#login {
+		padding: 0;
+		margin: 0;
+		left: 21vw;
+	}
 }
-@media screen and (max-width: 1700px){
-    .navBar {
-        left: 8.7em;
-    }
-    #login {
-        padding: 0;
-        margin: 0;
-        left: 17vw;
-    }
+@media screen and (max-width: 1700px) {
+	.navBar {
+		left: 8.7em;
+	}
+	#login {
+		padding: 0;
+		margin: 0;
+		left: 17vw;
+	}
 }
-@media screen and (max-width: 1000px){
-    .navMenu{
-        margin-left: 1em;
+@media screen and (max-width: 1000px) {
+	#navMenu {
+		margin-left: 1em;
+	}
+	#menuList {
+		justify-content: space-around;
+		top: 3vh;
+		left: 9vw;
+	}
+	.navBar {
+		top: 1.8em;
+		left: 8.2em;
+		height: 0.9vh;
+		width: 85vw;
+	}
+	#navMenu a {
+		font-size: 1.5em;
+	}
+	#menuList {
+		left: 14em;
+	}
+	#login {
+		left: 13vw;
+	}
+	h1 {
+		white-space: nowrap;
+		top: 6em;
+		left: -0.5em;
+		font-size: 1.4em;
+	}
+	header {
+		height: 30vh;
+	}
+}
+@media screen and (max-width: 415px) {
+	#login {
+		left: 0;
     }
-    .navMenu ul {
-        justify-content: space-around;
-         top: 3vh;
-         left: 9vw;
-     }
-     .navBar {
-        top: 1.8em;
-        left: 8.2em;
-        height: 0.9vh;
-        width: 85vw;
+    .navBar{
+        display: none;
     }
-    .navMenu a{
-        font-size: 1.5em;
+	#menuList{
+        text-align: center;
+        left: -1em;
+        top: -1.7em;
+        z-index: 1;
+        width: 100vw;
+        height: 50vh;
+        
     }
-    .navMenu ul{
-        left: 14em;
+    #menuButton{
+        display: block;
+        z-index: 2;
     }
-    #login {
-        left: 13vw;
+    .visible{
+        display: block;
     }
-    h1 {
-        white-space: nowrap;
-        top: 6em;
-        left: -0.5em;
-        font-size: 1.4em;
+    .flexList{
+        display: none;
     }
-    header{
-        height: 30vh;
+    .invisible{
+        display: none;
     }
-    
+    h1{
+        display: none;
+    }
 }
