--- a/Ponto_digital/Views/Home/Index.cshtml
+++ b/Ponto_digital/Views/Home/Index.cshtml
@@ -136,7 +136,7 @@
                 <div>
                     <div class="logoH3">
                         <img src="~/Iconografia/logoIcon.png" alt="logo Ponto Digital">
-                        <h3>Base</h3>
+                        <h3 class="othersH3">Base</h3>
                     </div>
                     <div class="texto">
                         <p class="descricao">Para o gerenciamento de
@@ -155,7 +155,7 @@
                 <div>
                     <div class="logoH3">
                         <img src="~/Iconografia/logoIcon.png" alt="logo Ponto Digital">
-                        <h3>Intermediário</h3>
+                        <h3 class="othersH3">Intermediário</h3>
                     </div>
                     <div class="texto">
                         <p class="descricao">Gerencia um grupo médio de
@@ -174,7 +174,7 @@
                 <div>
                     <div class="logoH3">
                         <img src="~/Iconografia/logoIcon.png" alt="logo Ponto Digital">
-                        <h3>Avançado</h3>
+                        <h3 class="othersH3">Avançado</h3>
                     </div>
                     <div class="texto">
                         <p class="descricao">Gerencia um grupo grande de
@@ -193,7 +193,7 @@
                 <div>
                     <div class="logoH3">
                         <img src="~/Iconografia/logoIcon.png" alt="logo Ponto Digital">
-                        <h3>Personalizado</h3>
+                        <h3 class="othersH3">Personalizado</h3>
                     </div>
                     <div class="texto">
                         <p class="descricao">Gerencia um grupo acima de 500
