--- a/Ponto_digital/wwwroot/css/Atendimento.css
+++ b/Ponto_digital/wwwroot/css/Atendimento.css
@@ -35,7 +35,6 @@ h2 {
     color: white;
 }
 #faq .resposta {
-    display: none;
     background-color: rgba(100, 94, 94, 0.5);
     padding: 1em 1em;
 }
@@ -175,6 +174,8 @@ h2 {
     font-size: 1.7em;
     height: 2em;
     padding: 0.3em 0.5em;
+    border-radius: 0.4em;
+    width: 80%;
 }
 #contato textarea {
     width: 180%;
@@ -204,6 +205,144 @@ h2 {
     cursor: pointer;
     color: #293972;
 }
+#contato input[name=assunto]{
+    width: 180%;
+}
 #contato option {
     padding: 0.5em;
+}
+@media screen and (max-width: 800px){
+    h2{
+        margin: 1em;
+        font-size: 2.3em;
+    }
+    #faq .container{
+        margin: 3em  0  0 2.5em;
+    }
+    #faq li{
+        font-size: 1.2em;
+        margin: 1em 0;
+    }
+    #faq .barra{
+        height: 17em;
+    }
+    #faq ul{
+        margin: -2em 3em;
+    }
+    #faq .obs{
+        margin-left: 2em;
+        font-size: 1em;
+    }
+    #comentarios{
+        margin: 2em 0;
+    }
+    #comentarios .verComentarios{
+        width: 95%;
+    }
+    #comentarios .informacoes{
+        margin: 0;
+        font-size: 1.2em;
+        margin-top: 3em;
+    }
+    #comentarios .textoComentario{
+        font-size: 1em;
+        white-space: pre-wrap;
+    }
+    #comentarios .verComentarios img {
+        position: relative;
+        right: 10em;
+        height: 3.5em;
+        width: 3.5em;
+    
+    }
+    #comentarios form {
+
+        margin: 1.5em 0 0 2em;
+        width: 90%;
+        height: 100%;
+    }
+    #comentarios input[type="submit"]{
+        width: 28%;
+    }
+    #comentarios textarea{
+        padding: 1em;
+    }
+    #contato form{
+        width: 90%;
+        padding: 1.5em;
+    }
+    #contato label{
+        font-size: 1.4em;
+    }
+    #contato input{
+        height: 1.5em;
+        width: 94%;
+    }
+    #contato select{
+        width: 94%;
+        font-size: 1em;
+    }
+    #contato input[name="assunto"]{
+        width: 194%;
+    }
+    #contato textarea{
+        width: 194%;
+    }
+    #contato input[type="submit"]{
+        width: 50%;
+    }
+}
+@media screen and (max-width: 414px){
+    h2{
+        font-size: 1.4em;
+    }
+    #faq .container{
+        margin-left: 1.5em; 
+    }
+    #faq ul{
+        margin: -3em 0;
+    }
+    #faq li{
+        list-style-image: none;
+        font-size: 1em;
+        white-space: normal;
+        padding:0 0.5em;
+    }
+    #faq .barra{
+        width: 0.3em;
+    }
+    #comentarios{
+        margin: 0;
+    }
+    #comentarios .verComentarios{
+        width: 93%;
+    }
+    #comentarios .informacoes{
+        margin: 0;
+        font-size: 1em;
+        margin-top: auto;
+    }
+    #comentarios .textoComentario{
+        font-size: 1em;
+        white-space: pre-wrap;
+    }
+    #comentarios .verComentarios img {
+        position: relative;
+        right: 10em;
+        height: 1em;
+        width: 1em;
+    
+    }
+    #comentarios form {
+
+        margin: 1.5em 0 0 2em;
+        width: 90%;
+        height: 100%;
+    }
+    #comentarios input[type="submit"]{
+        width: 28%;
+    }
+    #comentarios textarea{
+        padding: 1em;
+    }
 }
