Authentication almost done, the headerNav doesn't treat differently the admin from regular user

--- a/Ponto_digital/Views/Cliente/Cadastro.cshtml
+++ b/Ponto_digital/Views/Cliente/Cadastro.cshtml
@@ -4,7 +4,7 @@
 }
         <section>
             <h2>Cadastro</h2>
-            <form id="formCadastro" action="">
+            <form method = "POST" id="form" action="/Cliente/CadastrarCliente">
                     <div class="container">
                         <div>
                             <label for="primeiroNome">Primeiro nome</label></br>
