--- a/Ponto_digital/Views/Home/Index.cshtml
+++ b/Ponto_digital/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 @{
     Layout = "_Layout";
     Html.RenderPartial("_HeaderNavBar");
+    var user = ViewData["User"];
 }
         <section id="sobre">
             <div class="yt-video">
