--- a/Ponto_digital/Views/Shared/_HeaderNavBar.cshtml
+++ b/Ponto_digital/Views/Shared/_HeaderNavBar.cshtml
@@ -1,3 +1,4 @@
+
 <header id="inicio">
             <img id = "menuButton" onclick="ToggleMenu()" src="~/Iconografia/hambIcon.png" class="invisible1" alt="'Hamburguer' icon, press to slide the menu">
         <nav id="navMenu">
@@ -6,7 +7,17 @@
                 <li><a href='@Url.Action("Index", "Home")#planos'>Planos</a></li>
                 <li><a href='@Url.Action("Sobre", "Home")'>Sobre nós</a></li>
                 <li><a href='@Url.Action("Atendimento", "Home")'>Atendimento</a></li>
-                <li id="login"><a href='@Url.Action("Index", "Cliente")'>Login/Cadastro</a></li>
+                @if(String.IsNullOrEmpty((string)ViewData["User"])){
+
+                <li id="login"><a href='@Url.Action("Index", "Cliente")'>Login/Cadastro</a></li>    
+
+                }else{
+                    <li id="login"><a href='@Url.Action("Logout", "Cliente")'>Logout</a></li>
+                }
+                @if("ADMINISTRADOR".Equals((string)ViewData["Tipo"])){
+                    <li id="login"><a href='@Url.Action("Administrador", "Cliente")'>Administrador</a></li>
+                }
+                
             </ul>
             <div class="navBar"></div>
             <h1>Ponto Digital</h1>
