--- a/Ponto_digital/Views/Shared/_Layout.cshtml
+++ b/Ponto_digital/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
     case "Login":
     <link rel="stylesheet" href="~/css/Login.css">
     break;
+    case "ControlPanel":
+    <link rel="stylesheet" href="~/css/ControlPanel.css">
+    break;
     }
     <link href="https://fonts.googleapis.com/css?family=Nova+Square|Squada+One" rel="stylesheet">
     <title>@ViewData["ViewName"] Ponto Digital</title>
