--- a/Ponto_digital/Views/Shared/_HeaderNavBar.cshtml
+++ b/Ponto_digital/Views/Shared/_HeaderNavBar.cshtml
@@ -7,15 +7,15 @@
                 <li><a href='@Url.Action("Index", "Home")#planos'>Planos</a></li>
                 <li><a href='@Url.Action("Sobre", "Home")'>Sobre nós</a></li>
                 <li><a href='@Url.Action("Atendimento", "Home")'>Atendimento</a></li>
-                @if(String.IsNullOrEmpty((string)ViewData["User"])){
+                @if(String.IsNullOrEmpty((ViewBag.User))){
 
                 <li id="login"><a href='@Url.Action("Index", "Cliente")'>Login/Cadastro</a></li>    
 
                 }else{
                     <li id="login"><a href='@Url.Action("Logout", "Cliente")'>Logout</a></li>
                 }
-                @if("ADMINISTRADOR".Equals((string)ViewData["Tipo"])){
-                    <li id="login"><a href='@Url.Action("Administrador", "Cliente")'>Administrador</a></li>
+                @if(!String.IsNullOrEmpty(ViewBag.Adm)){
+                    <li id="login"><a href='@Url.Action("Index", "Administrador")'>Administrador</a></li>
                 }
                 
             </ul>
