--- a/Ponto_digital/Views/Home/Atendimento.cshtml
+++ b/Ponto_digital/Views/Home/Atendimento.cshtml
@@ -10,13 +10,13 @@
                 <ul>
                     <li onclick="FaqToggle(this)">
                         <a class="pergunta">Como posso esclarecer minhas dúvidas antes de adquirir o
-                            software?</a> </br>
+                            software?</a> <br/>
                         <div class="invisible1 resposta">
                             <p>Através do nosso serviço de atendimento via email, basta preencher nosso <a href="#contato">formulário</a>.</p>
                         </div>
                     </li>
                     <li onclick="FaqToggle(this)">
-                        <a class="pergunta">É possível negociar os preços dos planos?</a> </br>
+                        <a class="pergunta">É possível negociar os preços dos planos?</a> <br/>
                         <div class="invisible1 resposta">
                             <p>A 'Agora Vai' não negocia os preços de seus planos. Com exceção do plano Personalizado,
                                 que é
@@ -25,17 +25,17 @@
                     </li>
                     <li onclick="FaqToggle(this)">
                         <a class="pergunta">Por que eu não consigo deixar minha opinião na sessão de
-                            comentários?</a> </br>
+                            comentários?</a> <br/>
                         <div class="invisible1 resposta">
                             <p>Nós da Agora Vai, valorizamos muito a opinião de nossos clientes. Por isso, para que seu
-                                comentário possa ser submetido a nós, é preciso ter <a href="login.html" href="_blank">entrado
-                                    em sua conta</a> no site e ter realizado uma compra. </br>
+                                comentário possa ser submetido a nós, é preciso ter <a href='@Url.Action("Index","Cliente")' target="_blank">entrado
+                                    em sua conta</a> no site e ter realizado uma compra. <br/>
                                 Caso, mesmo sem ter realizado uma compra, esclarecer sua dúvida, use a nossa sessão de
                                 <a href="#contato">contato</a>!</p>
                         </div>
                     </li>
                     <li onclick="FaqToggle(this)">
-                        <a class="pergunta">Concluí o pedido, e agora?</a> </br>
+                        <a class="pergunta">Concluí o pedido, e agora?</a> <br/>
                         <div class="invisible1 resposta">
                             <p>Após concluído o processo de pedido, nós somos notificados via email. Uma vez
                                 notificados, processaremos sua requisição e responderemos dentro do período de tempo
@@ -45,7 +45,7 @@
                     </li>
                     <li onclick="FaqToggle(this)">
                         <a class="pergunta">Por que não consigo acessar a página para fazer o
-                            pedido?</a> </br>
+                            pedido?</a> <br/>
                         <div class="invisible1 resposta">
                             <p>Para realizar qualquer pedido, é preciso, antes, estar cadastrado. Essa é uma medida que
                                 visa a segurança tanto do cliente quanto da AgoraVai.</p>
@@ -63,33 +63,26 @@
                 <!--TODO: PROGRAMAR ÁREA NA QUAL OS COMENTÁRIOS APAREÇAM-->
                 <h2>Comentários</h2>
                 <div class="verComentarios">
-                    <div>
-                        <p class="informacoes">Sundar Pichai</p>
-                        <img src="~/Iconografia/pessoa2.png" alt="Foto de perfil do autor do comentário">
-                        <p class="textoComentario">Excelente, cortei custos da minha empresa com home office apenas com
-                            este software. </p>
-                    </div>
-                    <div>
-                        <p class="informacoes">Sundar Pichai</p>
-                        <img src="~/Iconografia/pessoa2.png" alt="Foto de perfil do autor do comentário">
-                        <p class="textoComentario">Excelente, cortei custos da minha empresa com home office apenas com
-                            este software. </p>
-                    </div>
-                    <div>
-                        <p class="informacoes">Sundar Pichai</p>
-                        <img src="~/Iconografia/pessoa2.png" alt="Foto de perfil do autor do comentário">
-                        <p class="textoComentario">Excelente, cortei custos da minha empresa com home office apenas com
-                            este software. </p>
-                    </div>
-                    <div>
-                        <p class="informacoes">Sundar Pichai</p>
-                        <img src="~/Iconografia/pessoa2.png" alt="Foto de perfil do autor do comentário">
-                        <p class="textoComentario">Excelente, cortei custos da minha empresa com home office apenas com
-                            este software. </p>
-                    </div>
+                    @foreach (var item in @Model.ListaDeComentariosAprovados as List<ComentarioModel>)
+                    {
+                        if(item != null)
+                        {
+                            <div>
+                                <p class="informacoes">@item.Cliente.Nome</p>
+                                <p>@item.Data</p>
+                                <!-- <img src="~/Iconografia/pessoa2.png" alt="Foto de perfil do autor do comentário"> -->
+                                <p class="textoComentario">@item.Conteudo</p>
+                            </div>
+                        }
+                        else{
+                            <div>
+                                <p class="informacoes">Não há nenhum comentário por enquanto, <a href='Url.Action("Cadastro","Cliente")'>cadastre-se</a> e seja o primeiro.</p>
+                            </div>
+                        }
+                    }
                     @if(!String.IsNullOrEmpty(ViewBag.User))
                     {
-                        <form method="POST" id="commentForm" action="/Comentario/CriarComentario">
+                        <form method="POST" id="commentForm" action="/Home/CriarComentario">
                             <h3>Deixe o seu: </h3>
                             <textarea name="conteudo"></textarea><br/>
                             <input name="enviar" type="submit" value="Enviar"/>
@@ -97,7 +90,7 @@
                     }else
                     {
                         <div class="desativado">
-                            <p>Apenas usuários cadastrados podem deixar comentários.<a href='Url.Action("Index","Cliente")'>Faça seu login aqui.</a></p>
+                            <p>Apenas usuários cadastrados podem deixar comentários.<a href='@Url.Action("Index","Cliente")'>Faça seu login aqui.</a></p>
                         </div>
                     }     
                 </div>
