--- a/Ponto_digital/Views/Home/Atendimento.cshtml
+++ b/Ponto_digital/Views/Home/Atendimento.cshtml
@@ -84,7 +84,7 @@
                     {
                         <form method="POST" id="commentForm" action="/Home/CriarComentario">
                             <h3>Deixe o seu: </h3>
-                            <textarea name="conteudo"></textarea><br/>
+                            <textarea name="conteudo" id = "conteudo"></textarea><br/>
                             <input name="enviar" type="submit" value="Enviar"/>
                         </form>
                     }else
