--- a/Ponto_digital/wwwroot/css/ControlPanel.css
+++ b/Ponto_digital/wwwroot/css/ControlPanel.css
@@ -1,36 +1,92 @@
 .flexContainer{
     display: flex;
 }
+table .flexContainer{
+    justify-content: space-around;
+    /* width: 10%; */
+}
 header{
     height: 50vh;
 }
 h2 {
-    margin: 0.2em 0;
+    margin: 0.8em 2.8em;
     text-align: left;
     color: #dc8b44;
     font-size: 3em;
     font-family: 'Nova Square', cursive;
     text-transform: uppercase;
-    text-align: center;
+    text-align: left;
 }
 #contadores{
     width: 100vw;
+    height: 100%;
 }
 .container{
     width: 90%;
+    height: 100%;
     margin: auto;
     justify-content: space-around;
 }
 .content{
-    width: 25%;
+    width: 20%;
+    height: 100%;
     text-align: center;
+    color: white;
+    text-transform: uppercase;
+    font-family: 'Nova Square', cursive;
+    border-radius: 5%; 
+}
+.content > p{
+    font-size: 2em;
+    margin-bottom: 10%;
 }
 .aguardando{
-    background-color: grey;
+    background-color: rgba(105, 99, 99, 0.74);
+}
+.total {
+    background-color: rgba(0, 0, 0, 0.301);
 }
 .aprovados{
-    background-color: green;
+    background-color: rgba(25, 117, 25, 0.698);
 }
 .reprovados{
-    background-color: red;
+    background-color: rgba(192, 22, 22, 0.671);
+}
+.btn:hover{
+    color: white;
+}
+.miniBar{
+    height: 100%;
+    width: 10%;
+}
+.aprovar{
+    color: rgb(34, 172, 34);
+}
+.reprovar{
+    color: rgb(206, 21, 21);
+}
+h3{
+    font-size: 1.5em;
+    margin: 10% 0; 
+}
+table{
+    width: 20%;
+    margin: 1.5em 6.6em;
+    color: white;
+    text-transform: uppercase;
+    font-family: 'Nova Square', cursive;
+}
+thead{
+    border: 1px solid white;
+}
+tbody:nth-child(odd){
+    background-color: rgba(0, 0, 0, 0.198);
+}
+tr{
+    width: 100%;
+    height: 100%;
+}
+td{
+    width: 100%;
+    height: 100%;
 }
