--- a/Ponto_digital/Views/Administrador/ControlPanel.cshtml
+++ b/Ponto_digital/Views/Administrador/ControlPanel.cshtml
@@ -5,7 +5,7 @@ Html.RenderPartial("_HeaderNavBar");
 <section id="contadores">
     <h2>Total de comentários</h2>
     <div class="container flexContainer">
-        <div class="content aguardando">
+        <div onclick="ControllToggle(this)" class="content aguardando">
             <h3>Aguardando:</h3>
             @if(@Model.ListaDeComentariosEmEspera != null){
                <p>@Model.ListaDeComentariosEmEspera.Count</p>
@@ -13,7 +13,7 @@ Html.RenderPartial("_HeaderNavBar");
                 <p>0</p>
             }
         </div>
-        <div class="content aprovados">
+        <div onclick="ControllToggle(this)" class="content aprovados">
             <h3>Aprovados:</h3>
             @if(@Model.ListaDeComentariosAprovados != null){
                <p>@Model.ListaDeComentariosAprovados.Count</p>
@@ -21,7 +21,7 @@ Html.RenderPartial("_HeaderNavBar");
                 <p>0</p>
             }
         </div>
-        <div class="content reprovados">
+        <div onclick="ControllToggle(this)" class="content reprovados">
             <h3>Reprovados:</h3>
             @if(@Model.ListaDeComentariosReprovados != null){
                <p>@Model.ListaDeComentariosReprovados.Count</p>
@@ -29,7 +29,7 @@ Html.RenderPartial("_HeaderNavBar");
                 <p>0</p>
             }
         </div>
-        <div class="content total">
+        <div onclick="ControllToggle(this)" class="content total">
             <h3>Total:</h3>
             @if(@Model.ListaDeTodosComentarios != null){
                <p>@Model.ListaDeTodosComentarios.Count</p>
@@ -39,7 +39,7 @@ Html.RenderPartial("_HeaderNavBar");
         </div>
     </div>
 </section>
-<section id="emEspera">
+<section id="aguardando">
     <h2>Comentários pendentes</h2>
     <table>
         <thead>
@@ -51,21 +51,116 @@ Html.RenderPartial("_HeaderNavBar");
             @foreach (var item in @Model.ListaDeComentariosEmEspera)
             {
             <tr>
-                <td>
+                <td class="nome">
                     @item.Cliente.Nome
                 </td>
-                <td>
+                <td class="data">
                     @item.Data
                 </td>
-                <td>
+                <td class="conteudo">
                     @item.Conteudo
                 </td>
                 <td class="flexContainer">
                     <a href='@Url.Action("AlterarComentario", "Administrador")?idComentario=@item.IdComentario&situacao=Aprovado'
                         class="btn aprovar">Aprovar</a>
-                        <div class="miniBar"></div>
+                        <div class="miniBar"> </div>
                     <a href='@Url.Action("AlterarComentario", "Administrador")?idComentario=@item.IdComentario&situacao=Reprovado'
                         class="btn reprovar">Reprovar</a>
+                </td>
+            </tr>
+            }
+        </tbody>
+    </table>
+</section>
+<section id="aprovados">
+    <h2>Comentários aprovados</h2>
+    <table>
+        <thead>
+            <th>Cliente</th>
+            <th>Data</th>
+            <th>Conteúdo</th>
+        </thead>
+        <tbody>
+            @foreach (var item in @Model.ListaDeComentariosAprovados)
+            {
+            <tr>
+                <td class="nome">
+                    @item.Cliente.Nome
+                </td>
+                <td class="data">
+                    @item.Data
+                </td>
+                <td class="conteudo">
+                    @item.Conteudo
+                </td>
+                <td class="flexContainer">
+                    <a href='@Url.Action("AlterarComentario", "Administrador")?idComentario=@item.IdComentario&situacao=Reprovado'
+                        class="btn reprovar">Reprovar</a>
+                        <div class="miniBar"> </div>
+                    <a href='@Url.Action("AlterarComentario", "Administrador")?idComentario=@item.IdComentario&situacao=Aguardando'
+                        class="btn suspender">Suspender</a>
+                </td>
+            </tr>
+            }
+        </tbody>
+    </table>
+</section>
+<section id="reprovados">
+    <h2>Comentários Reprovados</h2>
+    <table>
+        <thead>
+            <th>Cliente</th>
+            <th>Data</th>
+            <th>Conteúdo</th>
+        </thead>
+        <tbody>
+            @foreach (var item in @Model.ListaDeComentariosReprovados)
+            {
+            <tr>
+                <td class="nome">
+                    @item.Cliente.Nome
+                </td>
+                <td class="data">
+                    @item.Data
+                </td>
+                <td class="conteudo">
+                    @item.Conteudo
+                </td>
+                <td class="flexContainer botoes">
+                    <a href='@Url.Action("AlterarComentario", "Administrador")?idComentario=@item.IdComentario&situacao=Aprovado'
+                        class="btn aprovar">Aprovar</a>
+                        <div class="miniBar"> </div>
+                    <a href='@Url.Action("AlterarComentario", "Administrador")?idComentario=@item.IdComentario&situacao=Aguardando'
+                        class="btn suspender">Suspender</a>
+                </td>
+            </tr>
+            }
+        </tbody>
+    </table>
+</section>
+<section id="todos">
+    <h2>Todos os Comentários</h2>
+    <table>
+        <thead>
+            <th>Cliente</th>
+            <th>Data</th>
+            <th>Conteúdo</th>
+        </thead>
+        <tbody>
+            @foreach (var item in @Model.ListaDeTodosComentarios)
+            {
+            <tr>
+                <td class="situacao">
+                    @item.Situacao
+                </td>
+                <td class="nome">
+                    @item.Cliente.Nome
+                </td>
+                <td class="data">
+                    @item.Data
+                </td>
+                <td class="conteudo">
+                    @item.Conteudo
                 </td>
             </tr>
             }
