--- a/Ponto_digital/wwwroot/css/ControlPanel.css
+++ b/Ponto_digital/wwwroot/css/ControlPanel.css
@@ -1,12 +1,23 @@
-.flexContainer{
+.flexContainer {
     display: flex;
 }
-table .flexContainer{
+
+table .flexContainer {
     justify-content: space-around;
     /* width: 10%; */
 }
-header{
+
+header {
     height: 50vh;
+}
+section{
+    display: none;
+}
+#contadores{
+    display:block; 
+}
+.visible{
+    display: block;
 }
 h2 {
     margin: 0.8em 2.8em;
@@ -17,76 +28,118 @@ h2 {
     text-transform: uppercase;
     text-align: left;
 }
-#contadores{
+
+#contadores {
     width: 100vw;
     height: 100%;
 }
-.container{
+
+.container {
     width: 90%;
     height: 100%;
     margin: auto;
     justify-content: space-around;
 }
-.content{
+
+.content {
     width: 20%;
     height: 100%;
     text-align: center;
     color: white;
     text-transform: uppercase;
     font-family: 'Nova Square', cursive;
-    border-radius: 5%; 
+    border-radius: 5%;
 }
-.content > p{
+.content:hover{
+    cursor: pointer;
+}
+.content>p {
     font-size: 2em;
     margin-bottom: 10%;
 }
-.aguardando{
+
+.aguardando {
     background-color: rgba(105, 99, 99, 0.74);
 }
+
 .total {
     background-color: rgba(0, 0, 0, 0.301);
 }
-.aprovados{
+
+.aprovados {
     background-color: rgba(25, 117, 25, 0.698);
 }
-.reprovados{
+
+.reprovados {
     background-color: rgba(192, 22, 22, 0.671);
 }
-.btn:hover{
+
+.btn:hover {
     color: white;
 }
-.miniBar{
-    height: 100%;
-    width: 10%;
+
+.miniBar {
+    height: 1em;
+    width: 0.3em;
+    margin: 0 0.5em;
+    background-color: white;
 }
-.aprovar{
+
+.aprovar {
     color: rgb(34, 172, 34);
 }
-.reprovar{
+
+.reprovar {
     color: rgb(206, 21, 21);
 }
-h3{
+
+h3 {
     font-size: 1.5em;
-    margin: 10% 0; 
+    margin: 10% 0;
 }
-table{
-    width: 20%;
+
+table {
+    width: 85%;
+    text-align: left;
     margin: 1.5em 6.6em;
     color: white;
     text-transform: uppercase;
     font-family: 'Nova Square', cursive;
+    background-color: rgba(0, 0, 0, 0.438);
+    padding: 2em;
+    border-top-left-radius: 10%;
+    border-top-right-radius: 10%;
 }
-thead{
-    border: 1px solid white;
+
+tbody:nth-child(odd) {
+    background-color: rgb(0, 0, 0);
 }
-tbody:nth-child(odd){
-    background-color: rgba(0, 0, 0, 0.198);
-}
-tr{
+
+tbody {
     width: 100%;
     height: 100%;
 }
-td{
+
+tr {
     width: 100%;
     height: 100%;
+}
+
+td {
+    height: 100%;
+    white-space: nowrap;
+    margin: 0;
+    padding: 0.5em 0.3em 0.5em 0.3em;
+}
+.suspender{
+    color: gray;
+}
+.nome {
+    width: 10%;
+}
+.data{
+    width: 20%;
+}
+.conteudo{
+    width: 60%;
 }
